<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string-array name="preferences_map_view_mode_values">
		<item>Canvas renderer</item>
		<item>Mapnik (online)</item>
		<item>Osmarender (online)</item>
		<item>OpenCycleMap (online)</item>
	</string-array>
	

	<string-array name="preferences_text_scale_values">
		<item>tiny</item>
		<item>small</item>
		<item>normal</item>
		<item>large</item>
		<item>huge</item>
	</string-array>
	
	<string-array name="preferences_wikipedia_language_values">
		<item>default</item>
		<item>english</item>
		<item>german</item>
		<item>finnish</item>
	</string-array>
	
	<string-array name="routing_point_picker_values">
		<item>Find by address</item>
		<item>My current position</item>
		<item>Point on map</item>
	</string-array>

	<string name="application_name">Forever At Home</string>
	<string name="cancel">Cancel</string>
	<string name="error">Error</string>
	<string name="file_invalid">The selected file is invalid. Please select another one.</string>
	<string name="file_select">Please select a file.</string>
	<string name="follow_gps_disabled">Following your Position has been disabled</string>
	<string name="go_to_position">Go to position</string>
	<string name="gps_disabled">The GPS receiver is disabled</string>
	<string name="info_map_file_area">Area</string>
	<string name="info_map_file_comment">Comment</string>
	<string name="info_map_file_date">Date</string>
	<string name="info_map_file_debug">Debug information</string>
	<string name="info_map_file_debug_no">not included</string>
	<string name="info_map_file_debug_yes">included</string>
	<string name="info_map_file_name">File</string>
	<string name="info_map_file_start">Start position</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="latlon">Lat/Lon</string>
	<string name="menu_info">Info</string>
	<string name="menu_info_map_file">Map file properties</string>
	<string name="menu_info_about">About this software</string>
	<string name="menu_mapfile">Map file</string>
	<string name="menu_position">Position</string>
	<string name="menu_position_enter_coordinates">Enter coordinates</string>
	<string name="menu_position_gps_enable">Find and Follow your Position</string>
	<string name="menu_position_gps_disable">Stop following your Position</string>
	<string name="menu_position_map_file_center">Map file center</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_screenshot">Screenshot</string>
	<string name="menu_screenshot_jpeg">JPEG (lossy)</string>
	<string name="menu_screenshot_png">PNG (lossless)</string>
	<string name="menu_route">Routing</string>
	<string name="menu_route_new">New route</string>
	<string name="menu_route_list">Route as list</string>
	<string name="menu_route_clear">Clear route</string>
	<string name="menu_poi">Find POIs</string>
	<string name="menu_poi_show_on_map">Show POIs on map</string>
	<string name="menu_clear_map">Clear map</string>
	<string name="menu_wiki">Wikipedia</string>
	<string name="ok">OK</string>
	<string name="preferences_debug">Debug settings</string>
	<string name="preferences_general">General settings</string>
	<string name="preferences_cache_persistence">Cache persistence</string>
	<string name="preferences_cache_persistence_desc">Keep cached images on exit</string>
	<string name="preferences_cache_size">External storage</string>
	<string name="preferences_cache_size_desc">Adjust the size of the cache</string>
	<string name="preferences_cache_size_value">%.1f MB</string>
	<string name="preferences_fullscreen">Full screen mode</string>
	<string name="preferences_fullscreen_desc">Hide the status bar</string>
	<string name="preferences_map">Map settings</string>
	<string name="preferences_map_view_mode">Map mode</string>
	<string name="preferences_map_view_mode_desc">Select the operating mode</string>
	<string name="preferences_move_speed">Move speed</string>
	<string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
	<string name="preferences_move_speed_value">%d %% move speed</string>
	<string name="preferences_show_fps_counter">Frame rate</string>
	<string name="preferences_show_fps_counter_desc">Enable frames per second counter</string>
	<string name="preferences_show_scale_bar">Map scale bar</string>
	<string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
	<string name="preferences_show_tile_coordinates">Tile coordinates</string>
	<string name="preferences_show_tile_coordinates_desc">Show coordinates on tiles</string>
	<string name="preferences_show_tile_frames">Tile boundaries</string>
	<string name="preferences_show_tile_frames_desc">Draw tile boundaries</string>
	<string name="preferences_show_water_tiles">Water tiles</string>
	<string name="preferences_show_water_tiles_desc">Highlight tiles which have the water flag set</string>
	<string name="preferences_text_scale">Font size</string>
	<string name="preferences_text_scale_desc">Select the text size of map labels</string>
	<string name="preferences_wikipedia_language">Wikipedia Language</string>
	<string name="preferences_wikipedia_language_desc">Wikipedia articles will be loaded in this language</string>
	<string name="preferences_wake_lock">Stay awake</string>
	<string name="preferences_wake_lock_desc">Stop the screen from dimming</string>
	<string name="preferences_no_path_selected">no path selected</string>
	<string name="preferences_bundle_path">Mapfile Path</string>
	<string name="preferences_help_topics">Show all help topics again</string>
	<string name="preferences_help_topics_summary">Help topics are only shown on first visit by default. This resets all visited help topics.</string>
	<string name="preferences_help_toast">Will show all help topics on first visit again</string>
	<string name="unit_symbol_kilometer">&#160;km</string>
	<string name="unit_symbol_meter">&#160;m</string>
	<string name="zoomlevel">Zoom level</string>
	<string name="calculate_route">Calculate route</string>
	<string name="find_pois">Find nearby POIs</string>
	<string name="show_on_map">Show on map</string>
	<string name="select_installed_routingfile">Select a routing file</string>
	<string name="dialog_title_find_location">Find a location</string>
	<string name="help_topic">Help Topic</string>
	
	<!-- routing -->
	<string name="manage_routing_files">Manage Routing Files</string>
	<string name="routing_start_point">Start</string>
	<string name="routing_destination_point">Destination</string>
	<string name="routing_select_start">Select Start</string>
	<string name="routing_select_destination">Select Destination</string>
	<string name="routing_btn_calculate_route">Find Route</string>
	<string name="routing_file">Routing File</string>
	<string name="routing_installed_files">Installed Routing Files</string>
	<string name="routing_no_routingfile_found">No Routing File found</string>
	<string name="routing_add_routingfile">Add Routing File</string>
	<string name="routing_no_start_selected">No start selected</string>
	<string name="routing_no_destination_selected">No destination selected</string>
	<string name="routing_no_route_found">No route found</string>
	<string name="routing_routingfile_uninstalled_formatted">Routingfile "%1$s" uninstalled</string>
	
	<string name="loading_message">Loading, please wait...</string>
	<string name="confirm_delete_qst">Are you sure you want to delete?</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	
	<!-- Position Info -->
	<string name="positioninfo_nearest_junction">Nearest Junction</string>
	<string name="positioninfo_unknown_road">Unknown Road</string>
	<string name="refining_position">refining position</string>
	
	<!-- Source Files -->
	<string name="mapfile">Map-File</string>
	<string name="addressfile">Address-File</string>
	<string name="addressfile_avaiability">Searching for addresses will be:</string>
	<string name="addressfile_not_avaiable">The current mapfile doesn\'t support searching for addresses</string>
	<string name="routingfiles">Routing-Files</string>
	<string name="routingfile">Routing-File</string>
	<string name="routingfile_avaiability">Routing will be:</string>
	<string name="poifile">POI-File</string>
	<string name="poifile_avaiability">Searching for POIs will be:</string>
	
	<string name="filemanager_no_bundle_found">No mapfiles found. Either install some or go to settings and change the base directory to the directory, where your mapfiles are</string>
	
	<string name="enabled">enabled</string>
	<string name="disabled">disabled</string>
	
	<string name="selection_this_point">This point \n No information avaiable</string>
	
	
	<!-- search intent -->
	<string name="label_city">City</string>
	<string name="label_road">Road</string>
	<string name="default_city"></string>
	<string name="default_road"></string>
	<string name="button_search">Search</string>
	<string name="label_results">Results:</string>
	
	<string name="context_delete">Delete</string>
	<string name="context_modify">Modify</string>
	<string name="file_picker_this_directory">This Directory</string>
	<string name="select_a_valid_mapfile">"Can\'t show map, please select a valid Mapfile"</string>
	<string name="wikipedia_no_connection">Connection problem, couldn\'t load wikipedia articles</string>
	<string name="preference_offline_mode">Offline Mode</string>
	<string name="preference_offline_mode_summary">Forbids all online features</string>
	<string name="preferences_location_updates">Keep location updates</string>
	<string name="preferences_location_updates_summary">Application keeps track of your position, even when the map is not visible. This consumes more battery life.</string>
</resources>