<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/menu_preferences">
	<PreferenceCategory android:title="@string/preferences_map">
		<CheckBoxPreference android:title="@string/preferences_show_scale_bar"
			android:summary="@string/preferences_show_scale_bar_desc" android:key="showScaleBar" />
		<ListPreference android:title="@string/preferences_map_view_mode"
			android:summary="@string/preferences_map_view_mode_desc" android:entryValues="@array/preferences_map_view_mode_keys"
			android:entries="@array/preferences_map_view_mode_values" android:key="mapViewMode"
			android:defaultValue="@string/preferences_map_view_mode_default" />
		<ListPreference android:title="@string/preferences_text_scale" android:summary="@string/preferences_text_scale_desc"
			android:entryValues="@array/preferences_text_scale_keys" android:entries="@array/preferences_text_scale_values"
			android:key="textScale" android:defaultValue="@string/preferences_text_scale_default" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_general">
		<Preference android:title="@string/preferences_help_topics" android:key="resetHelpTopics" android:summary="@string/preferences_help_topics_summary"/>
		<CheckBoxPreference android:title="@string/preferences_fullscreen"
			android:summary="@string/preferences_fullscreen_desc" android:key="fullscreen" />
		<CheckBoxPreference android:title="@string/preferences_wake_lock"
			android:summary="@string/preferences_wake_lock_desc" android:key="wakeLock" />
		<CheckBoxPreference android:title="@string/preferences_cache_persistence"
			android:summary="@string/preferences_cache_persistence_desc" android:key="cachePersistence" />
		<org.muxe.advancedtouristmap.CacheSizePreference
			android:key="cacheSize" android:title="@string/preferences_cache_size" android:summary="@string/preferences_cache_size_desc"/>
		<org.muxe.advancedtouristmap.MoveSpeedPreference
			android:title="@string/preferences_move_speed" android:summary="@string/preferences_move_speed_desc" android:key="moveSpeed"/>
		<Preference android:title="@string/preferences_bundle_path" android:key="baseBundlePath"/>
		<ListPreference android:key="wikiLang" android:title="@string/preferences_wikipedia_language" android:summary="@string/preferences_wikipedia_language_desc" android:entryValues="@array/preferences_wikipedia_language_keys" android:entries="@array/preferences_wikipedia_language_values"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preferences_debug">
		<CheckBoxPreference android:title="@string/preferences_show_fps_counter"
			android:summary="@string/preferences_show_fps_counter_desc" android:key="showFpsCounter" />
		<CheckBoxPreference android:title="@string/preferences_show_tile_frames"
			android:summary="@string/preferences_show_tile_frames_desc" android:key="showTileFrames" />
		<CheckBoxPreference android:title="@string/preferences_show_tile_coordinates"
			android:summary="@string/preferences_show_tile_coordinates_desc" android:key="showTileCoordinates" />
		<CheckBoxPreference android:title="@string/preferences_show_water_tiles"
			android:summary="@string/preferences_show_water_tiles_desc" android:key="showWaterTiles" />
	</PreferenceCategory>
</PreferenceScreen>