<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_city"
    />
<!--EditText 
	android:text="@string/default_city" 
	android:id="@+id/EditText01" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	/-->
<AutoCompleteTextView 
	android:text="@string/default_city" 
	android:id="@+id/EditText01" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:singleLine="true"
	android:selectAllOnFocus="true"/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/label_road"
    />
<AutoCompleteTextView 
	android:text="@string/default_road" 
	android:id="@+id/EditText02" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:singleLine="true"
	android:selectAllOnFocus="true"/>
<Button 
	android:text="@string/button_search" 
	android:id="@+id/Button01" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	/>
</LinearLayout>