<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:text="@string/routing_installed_files" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <ListView android:id="@+id/manage_routingfiles_list" android:layout_height="wrap_content" android:layout_width="match_parent" />
    <TextView android:id="@+id/manage_routing_files_empty_text" android:text="@string/routing_no_routingfile_found" android:layout_height="wrap_content" android:layout_width="wrap_content" android:visibility="gone"/>
    <Button android:id="@+id/manage_routing_files_button_add" android:text="@string/routing_add_routingfile" android:layout_height="wrap_content" android:layout_width="match_parent" />
</LinearLayout>
