<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:padding="20dip">
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/mapfile" android:textStyle="bold" android:textColor="#FFF" />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="installed" android:textColor="#FFF" />
			
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/routingfiles" android:textStyle="bold" android:textColor="#FFF" />
		<TextView android:id="@+id/installed_bundle_info_routing_avail" android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="status:" android:textColor="#FFF" />

		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/addressfile" android:textStyle="bold" android:textColor="#FFF" />
		<TextView android:id="@+id/installed_bundle_info_address_avail" android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="status:" android:textColor="#FFF" />
			
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/poifile" android:textStyle="bold" android:textColor="#FFF" />
		<TextView android:id="@+id/installed_bundle_info_poi_avail" android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="status:" android:textColor="#FFF" />
	</LinearLayout>
</ScrollView>